# CvetkovskiOpenGL

./: README.md
cvetkovski/: CMakeLists.txt  cvetkovski.cpp  line.cpp  line.h  matrices.cpp  matrices.h  pathconfig.h.in  renderer.cpp  renderer.h  sphere.cpp  sphere.h  texture.cpp  texture.h
cvetkovski/shaders/: frag.glsl  sphere_frag.glsl  sphere_vert.glsl  vert.glsl
